<resources>
    <string name="app_name">Login Cwi</string>
    <string name="placeHolderCPF">CPF</string>
    <string name="menuHome">TELA\nINICIAL</string>
    <string name="menuLojaVirtual">LOJA\nVIRTUAL</string>
    <string name="menuBlog">BLOG</string>
    <string name="menuCards">CARTÕES\nRENNER</string>
    <string name="menuMore">MAIS</string>
    <string name="formLoginAvancar">prosseguir</string>
</resources>
